<resources>
    <string name="app_name">Keep Me Posted</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="empty_error">Cannot be empty</string>
    <string name="shopping">Shopping</string>
    <string name="todo">ToDo</string>
    <string name="budget">Budget</string>
    <string name="title_activity_planBudget">Plan Budget</string>
    <string name="action_sign_in_short">Register</string>
    <string name="email">Email</string>
    <string name="minimum_password">Password too short!enter minimum 6 characters!</string>
    <string name="auth_failed">Authentication failed!check your email and password!</string>
    <string name="auth_success">Authentication successful!!!</string>
    <string name="send_password_reset_email">Send Password reset email</string>
    <string name="title_activity_login">Sign in</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_name">Fullname</string>
    <string name="btn_login">LOGIN</string>
    <string name="btn_link_to_register">Not a member? Sign up now</string>
    <string name="btn_link_to_login">Already registered? Sign In</string>
    <string name="title_activity_reset_password">ResetPasswordActivity</string>
    <string name="btn_forgot_password">Forgot your password?</string>
    <string name="btn_reset_password">Reset Password</string>
    <string name="btn_back"><![CDATA[<< Back]]></string>
    <string name="hint_new_email">New Email</string>
    <string name="btn_sign_out">Sign Out</string>
    <string name="lbl_forgot_password">Forgot password?</string>
    <string name="forgot_password_msg">We just need your registered Email to send you password reset instructions.</string>
    <string name="add_item">Add item</string>
    <string name="description">Description</string>
    <string name="title">Title</string>
    <string name="total_price">Total Price</string>
    <string name="quantity">Quantity</string>
    <string name="unit_price">Unit Price</string>
    <string name="item">Item</string>
    <string name="category">Category</string>
    <string name="cancel">Cancel</string>
    <string name="delete">Delete</string>
    <string name="edit">Edit</string>
    <string name="save">Save</string>
    <string name="main_image">Main Image</string>
    <string name="shopping_list_title">Shopping list title</string>
    <string name="item_image">Item Image</string>
    <string name="ok">OK</string>
    <string name="permission_camera_rationale">Access to the camera is needed for detection</string>
    <string name="no_camera_permission">This application cannot run because it does not have the camera permission.  The application will now exit.</string>
    <string name="low_storage_error">Face detector dependencies cannot be downloaded due to low device storage</string>
    <string name="barcode_header">Click &quot;Read Barcode&quot; to read a barcode</string>
    <string name="read_barcode">Read Barcode</string>
    <string name="auto_focus">Auto Focus</string>
    <string name="use_flash">Use Flash</string>
    <string name="barcode_success">Barcode read successfully</string>
    <string name="barcode_failure">No barcode captured</string>
    <string name="barcode_error">"Error reading barcode: %1$s"</string>
    <string name="add_category">Add Category</string>
    <string name="price">Price</string>
    <string name="exp_date">Expiration Date</string>
    <string name="tot_price">Total Price(Rs:)</string>
    <string name="delete_all">Delete All</string>
    <string name="find_recipe">Find Recipe</string>
    <string name="title_activity_maps_1">Map</string>
</resources>
