<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="@dimen/card_margin"
    android:layout_marginLeft="@dimen/card_margin"
    android:layout_marginRight="@dimen/card_margin">

    <LinearLayout
        style="@style/Widget.CardContent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/category"
            android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
            android:layout_marginBottom="15dp"
            android:id="@+id/itemCategory" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/item"
            android:textAppearance="@style/TextAppearance.AppCompat.Title"
            android:layout_marginBottom="15dp"
            android:id="@+id/itemTitle" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/description"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:layout_marginBottom="15dp"
            android:id="@+id/itemDescription" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/quantity"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:layout_marginBottom="15dp"
            android:id="@+id/itemQuantity" />

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal" >

            <TextView
                android:layout_height="wrap_content"
                android:text="@string/unit_price"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:layout_marginBottom="15dp"
                android:layout_width="0dp"
                android:layout_weight=".50"
                android:id="@+id/itemUnitprice" />

            <TextView
                android:layout_height="wrap_content"
                android:text="@string/total_price"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:layout_marginBottom="15dp"
                android:layout_width="0dp"
                android:layout_weight=".50"
                android:id="@+id/itemTotalprice" />

        </LinearLayout>

    </LinearLayout>

</android.support.v7.widget.CardView>
