<?xml version="1.0" encoding="utf-8"?>

<LinearLayout android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="16dp"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:focusableInTouchMode="true">

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="10dp">

        <AutoCompleteTextView
            android:id="@+id/nameEditTextPC"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:hint="@string/title"
            android:maxLines="1"
            android:inputType="textAutoComplete"
            />

    </android.support.design.widget.TextInputLayout>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/cancelBtn"
            android:onClick="onCancelButtonPressed"
            android:text="@string/cancel"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:elegantTextHeight="false"
            android:textAlignment="center"
            android:layout_width="0dp"
            android:layout_weight=".50"
            style="@style/MyButtonCancel" />

        <Button
            android:id="@+id/saveBtnPC"
            android:onClick="onAddButtonPressed"
            android:text="@string/add_category"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:elegantTextHeight="false"
            android:textAlignment="center"
            android:layout_width="0dp"
            android:layout_weight=".50"
            style="@style/MyButton" />

    </LinearLayout>

</LinearLayout>
