<?xml version="1.0" encoding="utf-8"?>

<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main_content"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusable="true"
    android:focusableInTouchMode="true">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay"
        app:elevation="0dp">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
            app:elevation="0dp" />

    </android.support.design.widget.AppBarLayout>

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingTop="24dp"
            xmlns:android="http://schemas.android.com/apk/res/android">

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <ImageView
                        android:id="@+id/imageShoppinglistItemMain"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:scaleType="fitStart"
                        android:adjustViewBounds="true"
                        android:contentDescription="@string/main_image" />
                </LinearLayout>

            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/card_margin">

                <LinearLayout
                    style="@style/Widget.CardContent"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:elevation="3dp"
                    android:focusable="false">

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textAppearance="@style/Title"
                        android:layout_marginBottom="15dp"
                        android:id="@+id/itemTitleE"
                        android:textColor="@drawable/text_color"
                        android:enabled="false"
                        android:inputType="text|textAutoCorrect|textAutoComplete" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/item"
                        android:textAppearance="@style/Narrow"
                        android:layout_marginBottom="15dp"
                        android:id="@+id/itemTitlelbl"
                        android:paddingLeft="3dp" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/description"
                        android:paddingLeft="3dp"
                        android:textAppearance="@style/Narrow"
                        android:layout_marginBottom="15dp"
                        android:id="@+id/itemDescriptionlbl"/>

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textAppearance="@style/Medium"
                        android:layout_marginBottom="15dp"
                        android:id="@+id/itemDescriptionE"
                        android:enabled="false"
                        android:textColor="@drawable/text_color"
                        android:inputType="textCapSentences|textAutoCorrect|textAutoComplete|textMultiLine"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/category"
                        android:paddingLeft="3dp"
                        android:textAppearance="@style/Narrow"
                        android:layout_marginBottom="15dp"
                        android:id="@+id/itemCategorylbl"/>

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textAppearance="@style/Medium"
                        android:layout_marginBottom="15dp"
                        android:id="@+id/itemCategoryE"
                        android:enabled="false"
                        android:textColor="@drawable/text_color"
                        android:inputType="text|textAutoCorrect|textAutoComplete"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/quantity"
                        android:paddingLeft="3dp"
                        android:textAppearance="@style/Narrow"
                        android:layout_marginBottom="15dp"
                        android:id="@+id/itemQuantitylbl"/>

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textAppearance="@style/Medium"
                        android:layout_marginBottom="15dp"
                        android:id="@+id/itemQuantityE"
                        android:enabled="false"
                        android:textColor="@drawable/text_color"
                        android:inputType="number"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/unit_price"
                        android:paddingLeft="3dp"
                        android:textAppearance="@style/Narrow"
                        android:layout_marginBottom="15dp"
                        android:id="@+id/itemUnitpricelbl"/>

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textAppearance="@style/Medium"
                        android:layout_marginBottom="15dp"
                        android:id="@+id/itemUnitpriceE"
                        android:enabled="false"
                        android:textColor="@drawable/text_color"
                        android:inputType="number"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/total_price"
                        android:paddingLeft="3dp"
                        android:textAppearance="@style/Narrow"
                        android:layout_marginBottom="15dp"
                        android:id="@+id/itemTotalpricelbl"/>

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textAppearance="@style/Medium"
                        android:layout_marginBottom="15dp"
                        android:id="@+id/itemTotalpriceE"
                        android:enabled="false"
                        android:textColor="@drawable/text_color"
                        android:inputType="number"/>

                    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="horizontal" >

                        <Button
                            android:id="@+id/deleteButtonE"
                            android:onClick="onAddButtonPressed"
                            android:text="@string/delete"
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:elegantTextHeight="false"
                            android:textAlignment="center"
                            style="@style/MyButtonCancel"
                            android:layout_weight=".50"/>


                        <Button
                            android:id="@+id/editButtonE"
                            android:onClick="onAddButtonPressed"
                            android:text="@string/edit"
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:elegantTextHeight="false"
                            android:textAlignment="center"
                            style="@style/MyButton"
                            android:layout_weight=".50"/>

                        <Button
                            android:id="@+id/saveButtonE"
                            android:onClick="onAddButtonPressed"
                            android:text="@string/save"
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:elegantTextHeight="false"
                            android:textAlignment="center"
                            style="@style/MyButton"
                            android:visibility="gone"
                            android:layout_weight=".50"/>

                    </LinearLayout>

                </LinearLayout>

            </android.support.v7.widget.CardView>

        </LinearLayout>

    </android.support.v4.widget.NestedScrollView>

</android.support.design.widget.CoordinatorLayout>